--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -38,17 +38,30 @@
     <div class="home">
       <div class="app-nav">
         <div class="nav-left">
-
+          <button type="button" class="btn btn-default btn-lg btn-go-back">
+            <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span>
+          </button>
         </div>
         <div class="nav-right">
-          <button type="button" class="btn btn-default btn-nav">Schedule</button>
-          <button type="button" class="btn btn-default btn-nav">Members</button>
+
         </div>
 
       </div>
       <div class="container-fluid">
-        <h1>Pleasanton Rotary Club</h1>
-        <h2 class="table-title">Thursday, August 31, 2017</h2>
+        <h1>Edit Schedule</h1>
+        <div class="dropdown">
+          <button class="btn btn-default dropdown-toggle date-dropdown" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Thursday, Aug 31, 2017
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </div>
         <table class="table member-table">
           <tbody>
             <tr>
@@ -57,27 +70,57 @@
             </tr>
             <tr>
               <td>James Cameron</td>
-              <td>Greeter</td>
+              <td>
+                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Greeter
+                  <span class="caret"></span>
+                </button>
+              </td>
             </tr>
             <tr>
               <td>Alice Thomas</td>
-              <td>Photographer</td>
+              <td>
+                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Photographer
+                  <span class="caret"></span>
+                </button>
+              </td>
             </tr>
             <tr>
               <td>John Eng</td>
-              <td>MC</td>
+              <td>
+                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  MC
+                  <span class="caret"></span>
+                </button>
+              </td>
             </tr>
             <tr>
               <td>Karen Albert</td>
-              <td>News Letter</td>
+              <td>
+                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  News Letter
+                  <span class="caret"></span>
+                </button>
+              </td>
             </tr>
             <tr>
               <td>Mary Susi</td>
-              <td>Rox X</td>
+              <td>
+                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Role X
+                  <span class="caret"></span>
+                </button>
+              </td>
             </tr>
             <tr>
               <td>William Hopkins</td>
-              <td>Role Y</td>
+              <td>
+                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu7" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Role Y
+                  <span class="caret"></span>
+                </button>
+              </td>
             </tr>
           </tbody>
         </table>
