--- a/app/templates/choose-member.html
+++ b/app/templates/choose-member.html
@@ -30,46 +30,59 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <div class="pages-nav">
+      <button><a href="index.html">Home</a></button>
+      <button><a href="schedule.html">Schedule</a></button>
+      <button><a href="choose-member.html">Members</a></button>
+      <button><a href="view-member.html">View/Edit Member</a></button>
+    </div>
     <div class="home">
-      <nav>
-        <button type="button" class="btn btn-primary btn-nav">Schedule</button>
-        <button type="button" class="btn btn-primary btn-nav">Members</button>
-      </nav>
+      <div class="choose-member-nav">
+        <button type="button" class="btn btn-default btn-lg btn-go-back">
+          <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span>
+        </button>
+      </div>
       <div class="container-fluid">
-        <h1>Pleasanton Rotary Club</h1>
-        <h2 class="table-title">Thursday, August 31, 2017</h2>
-        <table class="table member-table">
-          <tbody>
-            <tr>
-              <th>Name</th>
-              <th>Role</th>
-            </tr>
-            <tr>
-              <td>James Cameron</td>
-              <td>Greeter</td>
-            </tr>
-            <tr>
-              <td>Alice Thomas</td>
-              <td>Photographer</td>
-            </tr>
-            <tr>
-              <td>John Eng</td>
-              <td>MC</td>
-            </tr>
-            <tr>
-              <td>Karen Albert</td>
-              <td>News Letter</td>
-            </tr>
-            <tr>
-              <td>Mary Susi</td>
-              <td>Rox X</td>
-            </tr>
-            <tr>
-              <td>William Hopkins</td>
-              <td>Role Y</td>
-            </tr>
-          </tbody>
-        </table>
+        <h1>Choose member</h1>
+        <div class="name-list-container">
+          <table class="table table-responsive name-list-table">
+            <tbody>
+              <tr>
+                <td class="name-list-row">James Cameron</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">Alice Thomas</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">John Eng</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">Karen Albert</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">Mary Susi</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">William Hopkins</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">Amy Shultz</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">Warren Cramer</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">Janet Hsu</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">Robert Keller</td>
+              </tr>
+              <tr>
+                <td class="name-list-row">Hellen Wittich</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
 
