--- a/app/templates/choose-member.html
+++ b/app/templates/choose-member.html
@@ -36,55 +36,71 @@
       <button><a href="choose-member.html">Members</a></button>
       <button><a href="view-member.html">View/Edit Member</a></button>
     </div>
-    <div class="home">
-      <div class="choose-member-nav">
-        <button type="button" class="btn btn-default btn-lg btn-go-back">
-          <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span>
-        </button>
-      </div>
-      <div class="container-fluid">
-        <h1>Choose member</h1>
-        <div class="name-list-container">
-          <table class="table table-responsive name-list-table">
-            <tbody>
-              <tr>
-                <td class="name-list-row">James Cameron</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">Alice Thomas</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">John Eng</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">Karen Albert</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">Mary Susi</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">William Hopkins</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">Amy Shultz</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">Warren Cramer</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">Janet Hsu</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">Robert Keller</td>
-              </tr>
-              <tr>
-                <td class="name-list-row">Hellen Wittich</td>
-              </tr>
-            </tbody>
-          </table>
+    <div class="col-sm-7">
+      <div class="home">
+        <div class="app-nav">
+          <div class="nav-left">
+            <button type="button" class="btn btn-default btn-lg btn-go-back">
+              <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span>
+            </button>
+          </div>
+          <div class="nav-right">
+            <button type="button" class="btn btn-default btn-lg btn-go-back">
+              New Member
+            </button>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <h1>Choose member</h1>
+          <div class="name-list-container">
+            <table class="table table-responsive name-list-table">
+              <tbody>
+                <tr>
+                  <td class="name-list-row">James Cameron</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">Alice Thomas</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">John Eng</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">Karen Albert</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">Mary Susi</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">William Hopkins</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">Amy Shultz</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">Warren Cramer</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">Janet Hsu</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">Robert Keller</td>
+                </tr>
+                <tr>
+                  <td class="name-list-row">Hellen Wittich</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
+    <div class="col-sm-5">
+      <ol>
+        <li>Click <b>New Member</b> to add a new member</li>
+        <li>Click on a member's name to see the detail page for that member</li>
+      </ol>
+    </div>
+
 
 
 
