--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -35,98 +35,115 @@
       <button><a href="choose-member.html">Members</a></button>
       <button><a href="view-member.html">View/Edit Member</a></button>
     </div>
-    <div class="home">
-      <div class="app-nav">
-        <div class="nav-left">
-          <button type="button" class="btn btn-default btn-lg btn-go-back">
-            <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span>
-          </button>
+    <div class="container-fluid">
+      <div class="col-sm-7">
+        <div class="home">
+          <div class="app-nav">
+            <div class="nav-left">
+              <button type="button" class="btn btn-default btn-lg btn-go-back">
+                <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span>
+              </button>
+            </div>
+            <div class="nav-right">
+              <button type="button" class="btn btn-default btn-lg btn-go-back">
+                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+              </button>
+            </div>
+          </div>
+          <div class="container-fluid">
+            <h1>Edit Schedule</h1>
+            <div class="dropdown">
+              <button class="btn btn-default dropdown-toggle date-dropdown" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                Thursday, Aug 31, 2017
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
+            <table class="table member-table">
+              <tbody>
+                <tr>
+                  <th>Name</th>
+                  <th>Role</th>
+                </tr>
+                <tr>
+                  <td>Greeter</td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      James Cameron
+                      <span class="caret"></span>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Photographer</td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Alice Thomas
+                      <span class="caret"></span>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>MC</td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      John Eng
+                      <span class="caret"></span>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>New Letter</td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Karen Albert
+                      <span class="caret"></span>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Role X</td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Mary Susi
+                      <span class="caret"></span>
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Role Y</td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu7" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      William Hopkins
+                      <span class="caret"></span>
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
-        <div class="nav-right">
-
-        </div>
-
       </div>
-      <div class="container-fluid">
-        <h1>Edit Schedule</h1>
-        <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle date-dropdown" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Thursday, Aug 31, 2017
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </div>
-        <table class="table member-table">
-          <tbody>
-            <tr>
-              <th>Name</th>
-              <th>Role</th>
-            </tr>
-            <tr>
-              <td>James Cameron</td>
-              <td>
-                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  Greeter
-                  <span class="caret"></span>
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td>Alice Thomas</td>
-              <td>
-                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  Photographer
-                  <span class="caret"></span>
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td>John Eng</td>
-              <td>
-                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  MC
-                  <span class="caret"></span>
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td>Karen Albert</td>
-              <td>
-                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  News Letter
-                  <span class="caret"></span>
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td>Mary Susi</td>
-              <td>
-                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  Role X
-                  <span class="caret"></span>
-                </button>
-              </td>
-            </tr>
-            <tr>
-              <td>William Hopkins</td>
-              <td>
-                <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu7" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                  Role Y
-                  <span class="caret"></span>
-                </button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+      <div class="col-sm-5">
+        <ol>
+          <li>Use to edit the schedule for a given week</li>
+          <li>Next 6 members in rotatation are automatically picked taking into consideration their preferred roles</li>
+          <li>Date dropdown will either be a calendar widget or a list of weeks</li>
+          <li>Dates will be calculated unless there is a need for exceptions in which case we will have to consider keeping a list of dates in the database</li>
+          <li><b><i>Sould be</i></b> able to pick from list or type to filter list (TBD)</li>
+          <li>List always appears in <em>edit mode</em></li>
+          <li>Click check mark button when done to save</li>
+        </ol>
       </div>
+
+
     </div>
-
 
 
 
