--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,57 +35,75 @@
       <button><a href="choose-member.html">Members</a></button>
       <button><a href="view-member.html">View/Edit Member</a></button>
     </div>
-    <div class="home">
-      <div class="app-nav">
-        <div class="nav-left">
+    <div class="col-sm-7">
+      <div class="home">
+        <div class="app-nav">
+          <div class="nav-left">
+
+          </div>
+          <div class="nav-right">
+            <button type="button" class="btn btn-default btn-nav">Schedule</button>
+            <button type="button" class="btn btn-default btn-nav">Members</button>
+          </div>
 
         </div>
-        <div class="nav-right">
-          <button type="button" class="btn btn-default btn-nav">Schedule</button>
-          <button type="button" class="btn btn-default btn-nav">Members</button>
+        <div class="container-fluid">
+          <h1>Pleasanton Rotary Club</h1>
+          <h2 class="table-title">Thursday, August 31, 2017</h2>
+          <table class="table member-table">
+            <tbody>
+              <tr>
+                <th>Name</th>
+                <th>Role</th>
+              </tr>
+              <tr>
+                <td>James Cameron</td>
+                <td>Greeter</td>
+              </tr>
+              <tr>
+                <td>Alice Thomas</td>
+                <td>Photographer</td>
+              </tr>
+              <tr>
+                <td>John Eng</td>
+                <td>MC</td>
+              </tr>
+              <tr>
+                <td>Karen Albert</td>
+                <td>News Letter</td>
+              </tr>
+              <tr>
+                <td>Mary Susi</td>
+                <td>Rox X</td>
+              </tr>
+              <tr>
+                <td>William Hopkins</td>
+                <td>Role Y</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-
-      </div>
-      <div class="container-fluid">
-        <h1>Pleasanton Rotary Club</h1>
-        <h2 class="table-title">Thursday, August 31, 2017</h2>
-        <table class="table member-table">
-          <tbody>
-            <tr>
-              <th>Name</th>
-              <th>Role</th>
-            </tr>
-            <tr>
-              <td>James Cameron</td>
-              <td>Greeter</td>
-            </tr>
-            <tr>
-              <td>Alice Thomas</td>
-              <td>Photographer</td>
-            </tr>
-            <tr>
-              <td>John Eng</td>
-              <td>MC</td>
-            </tr>
-            <tr>
-              <td>Karen Albert</td>
-              <td>News Letter</td>
-            </tr>
-            <tr>
-              <td>Mary Susi</td>
-              <td>Rox X</td>
-            </tr>
-            <tr>
-              <td>William Hopkins</td>
-              <td>Role Y</td>
-            </tr>
-          </tbody>
-        </table>
       </div>
     </div>
+    <div class="col-sm-5">
+      <h4>Mock-up</h4>
+      <ol>
+        <li>This is a mock-up only. Buttons, dropdowns etc do not work.</li>
+        <li>Actual app will be more happier colors</li>
+      </ol>
+      <h4>Application</h4>
+      <ol>
+        <li>What should the apps title be?</li>
+        <li>Resizes for phone, tablet &amp; desktop</li>
+      </ol>
+      <h4>This Screen</h4>
+      <ol>
 
-
-
+        <li>Opens with view of tne next meeting</li>
+        <li>Clicking <b>Schedule</b> takes you to the weekly schedule</li>
+        <li>Clicking <b>Members</b> takes you to a list of members from which you can get to the details for the choosen member</li>
+      </ol>
+    </div>
 
     <!-- keep at bottom of body -->
     <!-- Bootstrap: Latest compiled and minified JavaScript -->
