--- a/app/templates/schedule.html
+++ b/app/templates/schedule.html
@@ -68,59 +68,89 @@
             <table class="table member-table">
               <tbody>
                 <tr>
-                  <th>Name</th>
                   <th>Role</th>
+                  <th>Name</th>
                 </tr>
                 <tr>
-                  <td>Greeter</td>
                   <td>
                     <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                       James Cameron
                       <span class="caret"></span>
                     </button>
                   </td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Greeter
+                      <span class="caret"></span>
+                    </button>
+                  </td>
                 </tr>
                 <tr>
-                  <td>Photographer</td>
                   <td>
                     <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                       Alice Thomas
                       <span class="caret"></span>
                     </button>
                   </td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Photographer
+                      <span class="caret"></span>
+                    </button>
+                  </td>
                 </tr>
                 <tr>
-                  <td>MC</td>
                   <td>
                     <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                       John Eng
                       <span class="caret"></span>
                     </button>
                   </td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      MD
+                      <span class="caret"></span>
+                    </button>
+                  </td>
                 </tr>
                 <tr>
-                  <td>New Letter</td>
                   <td>
                     <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                       Karen Albert
                       <span class="caret"></span>
                     </button>
                   </td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      News Letter
+                      <span class="caret"></span>
+                    </button>
+                  </td>
                 </tr>
                 <tr>
-                  <td>Role X</td>
                   <td>
                     <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                       Mary Susi
                       <span class="caret"></span>
                     </button>
                   </td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Role X
+                      <span class="caret"></span>
+                    </button>
+                  </td>
                 </tr>
                 <tr>
-                  <td>Role Y</td>
                   <td>
                     <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu7" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                       William Hopkins
+                      <span class="caret"></span>
+                    </button>
+                  </td>
+                  <td>
+                    <button class="btn btn-default dropdown-toggle property-dropdown" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Role Y
                       <span class="caret"></span>
                     </button>
                   </td>
